# ChargeOpt

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-vercel.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
chargeopt/: __init__.py  __main__.py  analytics.py  app.py  config.py  data.py  db.py  domain.py  logging_config.py  repository.py  schemas.py  server.py
docs/: architecture.md
migrations/: 001_init.sql  002_seed.sql
public/: app.js  index.html
scripts/: migrate.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_analytics.py  test_api.py  test_app_coverage.py  test_config.py  test_coverage_gaps.py  test_db.py  test_domain.py  test_migrate.py  test_repository.py
