[project]
name = "chargeopt"
version = "0.2.0"
description = "ChargeOpt OS Enterprise – multi-station charging energy dispatch and VPP optimization."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1",
  "pydantic-settings>=2.3,<3",
  "structlog>=24.1,<25",
  "prometheus-client>=0.20,<1",
  "slowapi>=0.1.9,<1",
  "aiofiles>=23.0,<25",
]

[project.scripts]
chargeopt = "chargeopt.__main__:main"

[project.optional-dependencies]
db = [
  "uvicorn[standard]>=0.29,<1",
  "psycopg[binary,pool]>=3.2,<4",
]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5.0,<6",
  "pytest-asyncio>=0.23,<1",
  "httpx>=0.27,<1",
  "ruff>=0.4,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--cov=chargeopt --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["chargeopt"]
omit = ["chargeopt/server.py"]

[tool.vercel]
entrypoint = "main:app"

[tool.vercel.scripts]
build = ""
